argocd/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: argocd-server-http-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.pandathedog.com
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - '*.pandathedog.com'
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
  name: argocd-server-grpc-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: grpc.argocd.pandathedog.com
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  name: https
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - '*.pandathedog.com'
